javascript now included to poputate numbers on the screen properly. still need a limit to prevent overflow

--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ h1 {
     align-items: center;
 }
 
-.output-text {
+#output-text {
     /* border: 1px solid red; */
     margin: 2px;
     flex: 1;
@@ -106,5 +106,9 @@ h1 {
     background: #feda6a;
 }
 
-
+.grey-btn:hover,
+.yellow-btn:hover {
+    background: #f8ca40;
+    cursor: pointer;
+}
 
